add delete function
git-svn-id: http://talendforge.org/svn/mdm/trunk/trunk@28302 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/talend.ext.images.server/web/test.html
+++ b/talend.ext.images.server/web/test.html
@@ -26,7 +26,8 @@ function _submit(){
 File:<input type="file" name="imageFile" /><br />
 Catalog:<input type="text" name="catalogName" /><br />
 <input type="button" name="upload" value="upload" onclick="_submit()"><br />
-You can request the uploaded image in this way: "http://{web_context}[:port]/{feedback_uri}?width=300&height=300&preserveAspectRatio=true"
+You can request the uploaded image in this way: "http://{domain}[:port]/{web_context}/{feedback_uri}?width=300&height=300&preserveAspectRatio=true"<br />
+You can delete the uploaded image in this way:"http://{domain}[:port]/{web_context}/secure/ImageDeleteServlet?uri={feedback_uri}"
 </form>
 
 </BODY>
