0011155: Workbench plug-in branding
git-svn-id: http://talendforge.org/svn/tom/trunk@35948 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tom/content/root.xhtml
+++ b/org.talend.rcp.branding.tom/content/root.xhtml
@@ -3,14 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Welcome to Talend MDM Studio</title>
+<title>Welcome to Talend MDM Studio(Community Edition)</title>
 <link rel="stylesheet" href="root.css" type="text/css" />
 </head>
 <body>
 <div id="cadre">
-<div id="tophead"> <img src="imgs/corner1.gif" alt="" width="22" height="81" /> <img src="imgs/talend_logo.bmp" alt="Talend MDM Studio" width="165" height="100" /> <img src="imgs/fondHeader.gif" height="81" width="563" alt="" /> <img src="imgs/corner2_002.gif" width="19" height="81" alt="" /> </div>
+<div id="tophead"> <img src="imgs/corner1.gif" alt="" width="22" height="81" /> <img src="imgs/about.gif" alt="Talend MDM Studio" width="113" height="142" /> <img src="imgs/fondHeader.gif" height="81" width="563" alt="" /> <img src="imgs/corner2_002.gif" width="19" height="81" alt="" /> </div>
 <div id="Content">
-  <h1>Welcome to Talend MDM Studio</h1>
+  <h1>Welcome to Talend MDM Studio(Community Edition)</h1>
   <div id="cadreInner">
   <div id="innercorps">
     <div class="item"><h2>Website</h2>
