change the install guide link
git-svn-id: http://talendforge.org/svn/tom/trunk@36181 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tom/content/root.xhtml
+++ b/org.talend.rcp.branding.tom/content/root.xhtml
@@ -29,7 +29,7 @@
 			<div class="doc-section">
 			<br/>
 			<ul>
-			 <li><a href="http://talendforge.org/wiki/doku.php?id=doc:installation_guide">Installation guide</a></li><br/>
+			 <li><a href="http://talendforge.org/wiki/doku.php?id=mdmce:installation_guide">Installation guide</a></li><br/>
 			 <li><a href="http://www.talend.com/resources/documentation.php">User guide</a></li>
 			</ul>
 			</div>
